commit changes by Jhalak on 06-01-2015

--- a/bundle/en-us/messages.properties
+++ b/bundle/en-us/messages.properties
@@ -8,8 +8,12 @@ containerInventory.containerStatus 				= Container Status
 containerInventory.daysOfGP 					= Days of GP
 containerInventory.vgmMeasuredDate 				= VGM Measure Date
 containerInventory.containerImage 				= Container Image
-containerInventory.containerStatus.active	 	= Active
-containerInventory.containerStatus.inActive 	= InActive
+containerInventory.containerStatus.active	 	= On
+containerInventory.containerStatus.inActive 	= Off
 containerInventory.daysOfGP.Days 				= Days
 containerInventory.daysOfGP.Week				= Week
 containerInventory.daysOfGP.Month 				= Month
+containerInventory.btnAddContainerInventory		= Submit
+containerInventory.btnResetContainerInventory	= Reset
+containerInventory.btnCancelContainerInventory	= Cancel
+
